my commit example

--- a/src/component/Navbar/navbarr.css
+++ b/src/component/Navbar/navbarr.css
@@ -1,5 +1,5 @@
 .active{
-    color: white;
+    color: white(255, 253, 253);
     font-size: 1.2rem;
     transition: 0.1s ease-in;
     padding-right: 20px;
