--- a/src/component/header/index.scss
+++ b/src/component/header/index.scss
@@ -1,7 +1,7 @@
 header{
     height: 70px;
-    background-color: rgb(65, 65, 65);;
-    border-bottom: 2px solid lightcoral;
+    background-color: rgb(76, 87, 76);;
+    border-bottom: 5px solid whitesmoke;
     display: flex;
     align-items: center;
     position: sticky;
@@ -11,15 +11,22 @@ header{
     img{
         height: 50px;
         margin: 0 10px ;
+        border: 2px solid black;
+        border-radius: 100%;
+        background-color: black;
     }
     
     p{
         font-size: 2.5rem;
+        font-family: 'Trebuchet MS';
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
         font-weight: bold;
         color: rgb(255, 255, 255);
 
         span{
-            color: rgb(255, 122, 44);
+            font-family: 'Trebuchet MS';
+            color: rgb(116, 194, 133);
             font-weight: bold;
         }
     }
